--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "big-integer": "^1.6.52",
+    "dotenv": "^16.4.5",
     "forge": "^2.3.0",
     "https": "^1.0.0",
     "md5": "^2.3.0",
