--- a/example.env
+++ b/example.env
@@ -1,4 +1,5 @@
 #RENAME THIS FILE TO .ENV AND DELETE THIS LINE
-VIN=ADD YOUR VIM HERE
-EMAIL=YOUR EMAIL
-SENHA=YOUR PASSWORD
+VIN=VIN CAR
+EMAIL=GWM EMAIL ACCOUNT
+SENHA=PASSWORD GWM ACCOUNT
+PIN=MD5_PIN
